--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>RECICLAGEM</h1>
 
 <h2>Como podemos mudar o mundo</h2>
-    <li> </li>
+    <li>separar o lixo </li>
+<li>utilizar produtos sustentaveis</li>
 <li></li>
-
     
 
 
